--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<h1>Brewery Notes App</h1>
-<p>Create and edit notes about the breweries you visit or plan to visit!</p>
-<app-notes></app-notes>
+<div class="hero"></div>
+<div class="parallax">
+    <div class="inset">
+        <h1>Brewery Notes App</h1>
+        <p>Create and edit notes about the breweries you visit or plan to visit!</p>
+        <app-notes></app-notes>
+    </div>
+</div>
