--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -79,3 +79,47 @@ a {
 a:hover {
   color: var(--c-main-light);
 }
+
+
+.hero {
+  width: 100%;
+  background-image: url('../../assets/beer-flight.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 280px;
+}
+
+.parallax {
+  background-color: white;
+  width: 100%;
+}
+
+/* disable parallax for mobile */
+@media screen and (max-width: 900px) {
+  .hero {
+    background-attachment: scroll;
+  }
+}
+
+
+.inset {
+  width: 80%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 700px) {
+  .inset {
+    width: 80%;
+    margin: 0 auto;
+
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .inset {
+    width: 85%;
+    margin: 0 auto;
+
+  }
+}
