--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -2,6 +2,49 @@ h1 {
   color: var(--c-feature);
 }
 
+.hero {
+  width: 100%;
+  background-image: url('../../assets/keg-room.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 280px;
+}
+
+.parallax {
+  background-color: white;
+  width: 100%;
+}
+
+/* disable parallax for mobile */
+@media screen and (max-width: 900px) {
+  .hero {
+    background-attachment: scroll;
+  }
+}
+
+
+.inset {
+  width: 80%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 700px) {
+  .inset {
+    width: 80%;
+    margin: 0 auto;
+
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .inset {
+    width: 85%;
+    margin: 0 auto;
+
+  }
+}
+
 
 .welcome-info {
   font-size: 16px;
