--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,70 +1,77 @@
-<h1>Breweries & Notes</h1>
-<p class="welcome-info">On this site you will find a listing with information on some of the breweries in California
-  from the <a href="https://www.openbrewerydb.org/" target="_blank">Open Brewery DB</a> API. You can also keep
-  notes about your brewery visits
-  with the in-built notes app.
-</p>
+<div class="hero"></div>
+<div class="parallax">
+  <div class="inset">
+    <h1>Breweries & Notes</h1>
+    <p class="welcome-info">On this site you will find a listing with information on some of the breweries in California
+      from the <a href="https://www.openbrewerydb.org/" target="_blank">Open Brewery DB</a> API. You can also keep
+      notes about your brewery visits
+      with the in-built notes app.
+    </p>
 
-<div class="competition-contain">
-  <p class="comp-title">Enter the Competition!</p>
-  <p class="comp-info">For your chance to win, fill in the form below, vote for your favourite brewery from the list,
-    upload your
-    favourite
-    photo from a brewery visit of your choice, and press submit.
-  </p>
+    <div class="competition-contain">
+      <p class="comp-title">Enter the Competition!</p>
+      <p class="comp-info">For your chance to win, fill in the form below, vote for your favourite brewery from the
+        list,
+        upload your
+        favourite
+        photo from a brewery visit of your choice, and press submit.
+      </p>
 
-  <app-countdown></app-countdown>
+      <app-countdown></app-countdown>
 
-  <div *ngIf="submitted" class="thanks-msg">Thanks for your entry!</div>
+      <div *ngIf="submitted" class="thanks-msg">Thanks for your entry!</div>
 
-  <!-- 'novalidate' stops browser validation from happening on submit -->
-  <form #userForm="ngForm" novalidate (ngSubmit)="onSubmit()" *ngIf="!submitted">
+      <!-- 'novalidate' stops browser validation from happening on submit -->
+      <form #userForm="ngForm" novalidate (ngSubmit)="onSubmit()" *ngIf="!submitted">
 
-    <div class="form-group">
-      <label>First Name *</label>
-      <input required type="text" class="form-control" name="firstname" [(ngModel)]="userModel.firstname"
-        #firstname="ngModel" [class.is-invalid]="firstname.invalid && firstname.touched">
-      <small class="text-danger" [class.d-none]="firstname.valid || firstname.untouched">First name is required</small>
+        <div class="form-group">
+          <label>First Name *</label>
+          <input required type="text" class="form-control" name="firstname" [(ngModel)]="userModel.firstname"
+            #firstname="ngModel" [class.is-invalid]="firstname.invalid && firstname.touched">
+          <small class="text-danger" [class.d-none]="firstname.valid || firstname.untouched">First name is
+            required</small>
+        </div>
+
+        <div class="form-group">
+          <label>Last Name *</label>
+          <input required type="text" class="form-control" name="lastname" [(ngModel)]="userModel.lastname"
+            #lastname="ngModel" [class.is-invalid]="lastname.invalid && lastname.touched">
+          <small class="text-danger" [class.d-none]="lastname.valid || lastname.untouched">Last name is required</small>
+
+        </div>
+
+        <div class="form-group">
+          <label>Email *</label>
+          <input required type="email" pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+.[a-zA-Z0-9-.]+$" class="form-control"
+            name="email" [(ngModel)]="userModel.email" #email="ngModel"
+            [class.is-invalid]="email.invalid && email.touched">
+          <small class="text-danger" [class.d-none]="email.valid || email.untouched">Valid email is required</small>
+
+        </div>
+
+        <div class="form-group">
+          <label>Your vote *</label>
+          <select (blur)="validateOption(option.value)" (change)="validateOption(option.value)" #option="ngModel"
+            [class.is-invalid]="optionHasError && option.touched" class="custom-select" name="option"
+            [(ngModel)]="userModel.option">
+            <option value="default">Select your favourite brewery:</option>
+            <option *ngFor="let option of options"> {{ option }} </option>
+          </select>
+          <small class="text-danger" [class.d-none]="!optionHasError || option.untouched">Please select an
+            option</small>
+        </div>
+
+
+        <label>Upload your photo</label>
+        <input class="uploadField" type="file" (change)="onFileSelected($event)">
+
+        <button [disabled]="userForm.form.invalid || optionHasError" type="submit" class="btn btn-info"
+          (click)="onUpload()">submit
+        </button>
+
+
+      </form>
+
     </div>
 
-    <div class="form-group">
-      <label>Last Name *</label>
-      <input required type="text" class="form-control" name="lastname" [(ngModel)]="userModel.lastname"
-        #lastname="ngModel" [class.is-invalid]="lastname.invalid && lastname.touched">
-      <small class="text-danger" [class.d-none]="lastname.valid || lastname.untouched">Last name is required</small>
-
-    </div>
-
-    <div class="form-group">
-      <label>Email *</label>
-      <input required type="email" pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+.[a-zA-Z0-9-.]+$" class="form-control"
-        name="email" [(ngModel)]="userModel.email" #email="ngModel" [class.is-invalid]="email.invalid && email.touched">
-      <small class="text-danger" [class.d-none]="email.valid || email.untouched">Valid email is required</small>
-
-    </div>
-
-    <div class="form-group">
-      <label>Your vote *</label>
-      <select (blur)="validateOption(option.value)" (change)="validateOption(option.value)" #option="ngModel"
-        [class.is-invalid]="optionHasError && option.touched" class="custom-select" name="option"
-        [(ngModel)]="userModel.option">
-        <option value="default">Select your favourite brewery:</option>
-        <option *ngFor="let option of options"> {{ option }} </option>
-      </select>
-      <small class="text-danger" [class.d-none]="!optionHasError || option.untouched">Please select an option</small>
-    </div>
-
-
-    <label>Upload your photo</label>
-    <input class="uploadField" type="file" (change)="onFileSelected($event)">
-
-    <button [disabled]="userForm.form.invalid || optionHasError" type="submit" class="btn btn-info"
-      (click)="onUpload()">submit
-    </button>
-
-
-  </form>
-
-
-
-</div>
+  </div>
