--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,54 +1,51 @@
 h1 {
-  color: var(--c-feature);
+	color: var(--c-feature);
 }
-
 
 p {
-  font-size: 16px;
-  color: var(--c-grey);
-  margin-bottom: 30px;
+	font-size: 16px;
+	color: var(--c-grey);
+	margin-bottom: 30px;
 }
 
-
 .hero {
-  width: 100%;
-  background-image: url('../../assets/post-it.jpg');
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-  height: 280px;
+	width: 100%;
+	background-image: url("../../assets/post-it.jpg");
+	background-attachment: fixed;
+	background-size: cover;
+	background-position: center;
+	height: 50%;
 }
 
 .parallax {
-  background-color: white;
-  width: 100%;
+	background-color: white;
+	width: 100%;
+	min-height: 70%;
 }
 
 /* disable parallax for mobile */
 @media screen and (max-width: 900px) {
-  .hero {
-    background-attachment: scroll;
-  }
+	.hero {
+		background-attachment: scroll;
+	}
 }
 
-
 .inset {
-  width: 80%;
-  margin: 0 auto;
+	width: 80%;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 @media screen and (max-width: 700px) {
-  .inset {
-    width: 80%;
-    margin: 0 auto;
-
-  }
+	.inset {
+		width: 80%;
+		margin: 0 auto;
+	}
 }
 
 @media screen and (max-width: 560px) {
-  .inset {
-    width: 85%;
-    margin: 0 auto;
-
-  }
+	.inset {
+		width: 85%;
+		margin: 0 auto;
+	}
 }
