--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,24 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 
-  --c-main: #FFB200;
-  --c-main-light: rgb(255, 214, 118);
-  --c-feature: #A99078;
-  --c-grey: #4A4A4A;
-  --c-grey-light: rgb(212, 212, 212);
-  --c-fill: #F7F5F2;
-  --c-white: white;
+	--c-main: #ffb200;
+	--c-main-light: rgb(255, 214, 118);
+	--c-feature: #a99078;
+	--c-grey: #4a4a4a;
+	--c-grey-light: rgb(212, 212, 212);
+	--c-fill: #f7f5f2;
+	--c-white: white;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	height: 100vh;
 }
 
 h1 {
-  margin-top: 2em;
-  margin-bottom: 1em;
+	margin-top: 2em;
+	margin-bottom: 1em;
 }
